examples/namespace/network-policy.yaml
# Needs to be created for each namespace
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  labels:
    app: onepanel
  name: default
  namespace: default # replace with relevant namespace
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.169.254/32
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/part-of: onepanel
  podSelector: {}
